              RandomWaypointMobilityModel
 - bug 1399 - TCP not backing off retransmissions properly
 - bug 1441 - IPv4 header length handling
 - bug 1464 - ConfigStore Save + Load => Could not set default value 
                  for ns3::UdpSocketImpl::IcmpCallback
 - bug 1475 - "test.py --list" should sort the output
 - bug 1476 - TestCase::GetName () should not be private
 - Bug 1477 - Click doesn't work with raw sockets
 - fixed bug with multiple LCs in UL BSR
 - fixed bug with lena-dual-stripe crashes with --homeUesHomeEnbRatio=2

Known issues
------------
In general, known issues are tracked on the project tracker available
at http://www.nsnam.org/bugzilla/

Release 3.14.1
==============

Availability
------------
This release is available from:
http://www.nsnam.org/release/ns-allinone-3.14.1.tar.bz2

Bugs fixed
----------
This hotfix release contains a fix for the PyViz visualizer and makes it
easier to add PyViz support to examples; otherwise it is the same as the
ns-3.14 release.

Release 3.14
============

Availability
------------
This release is available from: 
http://www.nsnam.org/release/ns-allinone-3.14.tar.bz2

Supported platforms
-------------------
ns-3.14 has been tested on the following platforms.  Not all features are
available on all platforms; check the Installation page on the project wiki.

- Fedora Core 17 (32/64 bit) with g++-4.7.0
- Fedora Core 16 (32/64 bit) with g++-4.6.3
- Fedora Core 15 (64 bit) with g++-4.6.3
- Ubuntu 12.04 (32/64 bit) with g++-4.6.3
- Ubuntu 11.10 (32 bit) with g++-4.6.1
- Ubuntu 10.04.4 LTS (64 bit) with g++-4.4.3
- OS X Lion 10.7.4 with g++-4.2.1
- OS X Snow Leopard 10.6.8 with g++-4.2.1 
- FreeBSD 8.2 (32 bit) with g++-4.2.1
- Cygwin 1.7.9-1 with g++-4.5.3

New user-visible features
-------------------------
- Transport protocol implementations (TCP, UDP) have been refactored to
  support also IPv6 connections. Dual-stacked IPv6 sockets are implemented. 