@@ -21,9 +21,12 @@
 #include "jakes-process.h"
 #include "ns3/simulator.h"
 #include "ns3/double.h"
+#include "ns3/log.h"
 #include "ns3/uinteger.h"
 #include "propagation-loss-model.h"
 #include "jakes-propagation-loss-model.h"
+
+NS_LOG_COMPONENT_DEFINE ("JakesProcess");
 
 namespace ns3 {
 
